tests/baselines/reference/tsxSpreadAttributesResolution17.errors.txt
file.tsx(11,16): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file.tsx(11,26): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file.tsx(18,21): error TS2607: JSX element class does not support attributes because it does not have a 'props' property.


==== file.tsx (3 errors) ====
    declare global {
        namespace JSX {
            interface Element {}
            interface ElementAttributesProperty { props: {} }
        }
    }
    declare var React: any;
    
    export class Empty extends React.Component<{}, {}> {
        render() {
            return <div>Hello</div>;
                   ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                             ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        }
    }
    
    declare const obj: { a: number | undefined } | undefined;
    
    // OK
    let unionedSpread = <Empty {...obj} />;
                        ~~~~~~~~~~~~~~~~~~
!!! error TS2607: JSX element class does not support attributes because it does not have a 'props' property.
    